# chatbot

./: .gitignore  README.md  docker-compose.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/admin/dashboard/: page.tsx
client/app/login/: page.tsx
client/app/staff/dashboard/: page.tsx
client/components/admin/: FeedbackTable.tsx  StaffMonitor.tsx
client/components/chat/: ChatInput.tsx  ChatWidget.tsx  ChatWindow.tsx  FeedbackPrompt.tsx  MessageBubble.tsx
client/components/shared/: ProtectedRoute.tsx
client/components/staff/: ConversationList.tsx  StaffChatView.tsx
client/lib/: api.ts  socket.ts
client/stores/: authStore.ts  chatStore.ts
client/types/: index.ts
server/: .env.example  main.py  pyproject.toml  seed.py  worker.py
server/app/: config.py  database.py
server/app/middleware/: auth.py
server/app/models/: __init__.py  connection_event.py  conversation.py  customer.py  feedback.py  message.py  user.py
server/app/routers/: admin.py  auth.py  staff.py
server/app/schemas/: auth.py  chat.py  feedback.py
server/app/services/: auth_service.py  redis_service.py
server/app/utils/: security.py
server/app/websocket/: events.py  handlers.py  manager.py
